<resources>
    <string name="app_name">Tour Kolkata</string>
    <string name="category_heritage">Heritage</string>
    <string name="category_religious">Religious</string>
    <string name="category_nature">Nature</string>
    <string name="category_sports">Sports</string>
    <string name="category_others">Others</string>
    <string name="victoria_memorial">The Victoria Memorial is a large marble building in Kolkata,
        West Bengal, India, which was built between 1906 and 1921. It is dedicated to the memory of
        Queen Victoria, then Empress of India, and is now a museum under the auspices of the
        Ministry of Culture. The memorial lies on the Maidan, near Jawaharlal Nehru Road
        (also known as Chowringhee Road).</string>
    <string name="fort_william">Fort William is a fort in Hastings, Calcutta (Kolkata). It was built
        during the early years of the Bengal Presidency of British India. It sits on the eastern
        banks of the Hooghly River, the major distributary of the River Ganges. One of Kolkata\'s
        most enduring Raj-era edifices, it extends over an area of 70.9 hectares. The fort was named
        after King William III. In front of the Fort is the Maidan, the largest park in the city.
        An internal guard room became the Black Hole of Calcutta.</string>
    <string name="howrah_bridge">Howrah Bridge is a balanced cantilever bridge over the Hooghly
        River in West Bengal, India. Commissioned in 1943, the bridge was originally named the New
        Howrah Bridge, because it replaced a pontoon bridge at the same location linking the two
        cities of Howrah and Kolkata (Calcutta). On 14 June 1965 it was renamed Rabindra Setu after
        the great Bengali poet Rabindranath Tagore, who was the first Indian and Asian Nobel
        laureate. It is still popularly known as the Howrah Bridge. The bridge is one of four on the
        Hooghly River and is a famous symbol of Kolkata and West Bengal. The other bridges are the
        Vidyasagar Setu (popularly called the Second Hooghly Bridge), the Vivekananda Setu and the
        newly built Nivedita Setu. It weathers the storms of the Bay of Bengal region, carrying a
        daily traffic of approximately 100,000 vehicles and possibly more than 150,000 pedestrians,
         easily making it the busiest cantilever bridge in the world. The third-longest cantilever
        bridge at the time of its construction, the Howrah Bridge is currently the sixth-longest
        bridge of its type in the world.</string>
    <string name="indian_museum">The Indian Museum in Kolkata, West Bengal, India, also referred to
        as the Imperial Museum at Calcutta in colonial-era texts, is the ninth oldest museum in the
        world, the oldest museum in India, and the largest museum in India. It has rare collections
        of antiques, armour and ornaments, fossils, skeletons, mummies and Mughal paintings. It was
        founded by the Asiatic Society of Bengal in Kolkata (Calcutta), India, in 1814. The founder
        curator was Nathaniel Wallich, a Danish botanist. It has six sections comprising thirty five
        galleries of cultural and scientific artifacts namely Indian art, archaeology, anthropology,
        geology, zoology and economic botany. Many rare and unique specimens, both Indian and
        trans-Indian, relating to humanities and natural sciences, are preserved and displayed in
        the galleries of these sections. In particular the art and archaeology sections hold
        collections of international importance. It is an autonomous organization under Ministry of
        Culture, Government of India. The present Director of the Indian Museum is Shri Arijit Dutta
        Choudhury who is also the Director General, NCSM and having the additional charge of
        Director General of National Library. Administrative control of the Cultural sections, viz.
        Art, Archaeology and Anthropology rests with the Board of Trustees under its Directorate,
        and that of the three other science sections is with the geological survey of India, the
        zoological survey of India and the Botanical survey of India. The museum Directorate has
        eight co-ordinating service units: Education, preservation, publication, presentation,
        photography, medical, modelling and library. This multipurpose institution with
        multidisciplinary activities is being included as an Institute of national importance in the
        seventh schedule of the Constitution of India.</string>
    <string name="marble_palace">Marble Palace is a palatial nineteenth-century mansion in North
        Kolkata. It is located at 46, Muktaram Babu Street, Kolkata 700007. It is one of the
        best-preserved and most elegant houses of nineteenth-century Calcutta. The mansion is famous
        for its marble walls, floors, and sculptures, from which it derives its name.</string>
    <string name="mother_house">The Missionaries of Charity’s Mother House is a holy place of
        pilgrimage and reverence for those who are searching for a more meaningful existence. It was
        established by the Blessed Mother Teresa in 1950 with the purpose of selfless service to
        mankind and to uplift the plagued humanity towards the path of salvation. After Mother
        Teresa left her mortal body in 1997, she was laid to rest in a tomb inside the house where
        she lived and served. The site of the tomb is very simple yet it exudes enormous amount of
        benign and pure vibration that fills the heart with gratitude and peace. Situated amidst
        noise and crowd, Mothers tomb is a true reflection of her life which contemplated the
        example of soulful and mindful meditation. he Mother House- Missionaries of Charity is
        situated near Ripon Street. Its nearest landmark is the Sealdah Loreto Convent.</string>
    <string name="jorasanko_thakurbari">Jorasanko Thakur Bari (Bengali: House of the Thakurs
        (anglicised to Tagore) in Jorasanko, North Kolkata, West Bengal, India, is the ancestral
        home of the Tagore family. It is currently located on the Rabindra Bharati University
        campus at 6/4 Dwarakanath Tagore Lane, Jorasanko, Kolkata 700007. It is the house in which
        the poet and first non-European Nobel laureate, Rabindranath Tagore was born. It is also
        the place where he spent most of his childhood and died on 7 August 1941</string>
    <string name="shobhabajar_rajbari">Shobhabazar Rajbari (Shobhabazar Royal Palace) is the palace
        of the Shobhabazar royal family located in the Indian city of Kolkata. Maharaja Nabakrishna
        Deb (1737–97), founder of the Shobhabazar Rajbari (at 35), started life as a modest
        aristocrat but soon amassed considerable wealth in his service to the British, in particular
        by his role in assisting to topple Siraj ud-Daulah. During his lifetime Raja Nabakrishna Deb
        built two houses. The building at 35 Raja Nabakrishna Street (known as Shobhabazar Rajbari
        or "Baag ola Bari - House with the lions"), on the northern side of the road, was the one
        first constructed by him, subsequently inherited by his adopted son from his elder brother
        Gopimohan and his descendants including his son Radhakanta Deb. The house at 33 Raja
        Nabakrishna Street (known as Choto Rajbari) was built by him when a son was born to him
        later in life, and was left to his biological son Rajkrishna and his descendants.</string>
    <string name="prinsep_ghat">Prinsep Ghat is a ghat built in 1841 during the British Raj, along
        the Kolkata bank of the Hooghly River in India. The Palladian porch in the memory of the
        eminent Anglo-Indian scholar and antiquary James Prinsep was designed by W. Fitzgerald and
        constructed in 1843. Located between the Water Gate and the St George\'s Gate of the Fort
        William, the monument to Prinsep is rich in Greek and Gothic inlays. It was restored by the
        state\'s public works department in November 2001 and has since been well-maintained. In its
        initial years, all royal British entourages used the Prinsep Ghat jetty for embarkation and
        disembarkation.</string>
    <string name="national_library">The National Library of India is the largest library located in
        Belvedere Estate, Alipore, Kolkata, India. It is India\'s largest library by volume and
        public record. National Library is under the Ministry of Culture, Government of
        India. The library is designated to collect, disseminate and preserve printed material
        produced in India. It is the largest in India with a collection in excess of 2.2 million
        books. Before independence, it was the official residence of Governor-General of India. The
        library operates under the national government’s Department of Culture and is designated to
        collect, disseminate, and preserve all printed material produced in India. The National
        Library is a result of the merging of the public library with the Imperial Library—several
        government libraries. The National Library (1953), then the Imperial Library housed several
        foreign (British) and Indian titles and was open to the public. It collects book,
        periodicals, and titles in virtually all the Indian languages while the special collections
        in the National Library of India house at least fifteen languages. The Hindi department
        has books that date back all the way to the nineteenth century and the first ever books
        printed in that language. The collections break down and consist of 86,000 maps and 3,200
        manuscripts.</string>
    <string name="shaheed_minar">The Shaheed Minar (English: Martyrs\' Monument), formerly known as
        the Ochterlony Monument, is a monument in Kolkata that was erected in 1828 in memory of
        Major-general Sir David Ochterlony, commander of the British East India Company, to
        commemorate both his successful defense of Delhi against the Marathas in 1804 and the
        victory of the East India Company’s armed forces over the Gurkhas in the Anglo-Nepalese War
        also known as the Gurkha War. The monument was constructed in his memory. It was designed by
        J. P. Parker and paid for from public funds. On 9 August 1969 it was rededicated to the
        memory of the martyrs of the Indian freedom movement and renamed the "Shaheed Minar," which
        means "martyrs' monument" in both Bengali and Hindi, by the then United Front Government in
        memory of the martyrs of the Indian independence movement. The present
        [when?] government has decided to illuminate the tower during evenings and allow visitors to
        the top. The last people to have been up there were former governor Gopal Krishna
        Gandhi and his family.</string>
    <string name="raj_bhavan">Raj Bhavan is the official residence of the Governor of West Bengal,
        located in the capital city Kolkata. Built in 1803, it was known as Government House before
        the independence of India. After the transfer of power from the East India Company to the
        British Crown in 1858, it became the official residence of the Viceroy of India, shifting
        here from the Belvedere Estate. With the shifting of capital to Delhi in 1911 it became the
        official residence of Lieutenant Governor of Bengal. Since independence in 1947 it serves as
        the official residence of the Governor of West Bengal and came to be known as the Raj
        Bhavan, a name it shares with the official residences of other states\' governors.</string>
</resources>